unpackaged/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Store Authorization information for entitlements for members serviced outside of their respective clubs.</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>