unpackaged/main/default/objects/Feedback__c/fields/Auth_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Auth_Autonumber__c</fullName>
    <displayFormat>01{0000000000}</displayFormat>
    <label>Auth Autonumber</label>
    <type>AutoNumber</type>
</CustomField>