unpackaged/main/default/objects/Feedback__c/fields/Authorization_Log__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Log__c</fullName>
    <label>Authorization Log</label>
    <length>18</length>
    <type>Text</type>
</CustomField>