unpackaged/main/default/objects/Feedback__c/fields/Charge_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Charge_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that is set when a Feedback provided by other clubs.</description>
    <label>Charge Entitlement</label>
    <type>Checkbox</type>
</CustomField>