unpackaged/main/default/objects/Feedback__c/fields/Is_Sent_To_National__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent_To_National__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tracks the status whether the feedback is sent to National successfully or not</description>
    <inlineHelpText>This field tracks the status whether the feedback is sent to National successfully or not</inlineHelpText>
    <label>Is Sent To National</label>
    <type>Checkbox</type>
</CustomField>