unpackaged/main/default/objects/Feedback__c/fields/Long_Tow_Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Kilometers__c</fullName>
    <label>Long Tow Kilometers</label>
    <length>6</length>
    <type>Text</type>
</CustomField>