unpackaged/main/default/objects/Feedback__c/fields/Long_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Miles__c</fullName>
    <label>Long Tow Miles</label>
    <length>6</length>
    <type>Text</type>
</CustomField>