unpackaged/main/default/objects/Feedback__c/fields/Member_Club__c.field-meta.xml
<CustomField>
    <fullName>Member_Club__c</fullName>
    <label>Member Club</label>
    <length>3</length>
    <type>Text</type>
</CustomField>