unpackaged/main/default/objects/Feedback__c/fields/Rental_Days__c.field-meta.xml
<CustomField>
    <fullName>Rental_Days__c</fullName>
    <label>Rental Days</label>
    <length>10</length>
    <type>Text</type>
</CustomField>