unpackaged/main/default/objects/Feedback__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>Date the work order is cleared</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>