unpackaged/main/default/objects/Feedback__c/fields/Service_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Month__c</fullName>
    <label>Service Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>