unpackaged/main/default/objects/Feedback__c/fields/Service_Year__c.field-meta.xml
<CustomField>
    <fullName>Service_Year__c</fullName>
    <label>Service Year</label>
    <length>2</length>
    <type>Text</type>
</CustomField>