unpackaged/main/default/objects/Feedback__c/fields/Source_Club__c.field-meta.xml
<CustomField>
    <fullName>Source_Club__c</fullName>
    <label>Source Club</label>
    <length>3</length>
    <type>Text</type>
</CustomField>