unpackaged/main/default/objects/Feedback__c/fields/Source_Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Club_Code__c</fullName>
    <label>Source Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>