unpackaged/main/default/objects/Feedback__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>