unpackaged/main/default/objects/Feedback__c/fields/Trouble_Code__c.field-meta.xml
<CustomField>
    <fullName>Trouble_Code__c</fullName>
    <label>Trouble Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>