unpackaged/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Source_Club__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Member_Club__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>data migration</value>
    </filters>
    <filters>
        <field>Member_Club__c</field>
        <operation>equals</operation>
        <value>240</value>
    </filters>
    <filters>
        <field>Source_Club__c</field>
        <operation>notEqual</operation>
        <value>240</value>
    </filters>
    <label>All</label>
</ListView>