unpackaged/main/default/objects/Feedback__c/listViews/Feedbacks_Kevan.listView-meta.xml
<ListView>
    <fullName>Feedbacks_Kevan</fullName>
    <columns>NAME</columns>
    <columns>Authorization_Code__c</columns>
    <columns>Authorization_Level__c</columns>
    <columns>Source_Club__c</columns>
    <columns>Member_Club__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Member_ID__c</columns>
    <columns>Service_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Charge_Entitlement__c</columns>
    <columns>Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Work_Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Feedbacks - Kevan</label>
    <sharedTo>
        <role>Back_Office</role>
    </sharedTo>
</ListView>